--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header></header>
     <main>
         <h1>Proyecto</h1>
-        <section></section>
+        <section>Las razas de perros</section>
     </main>
     <footer></footer>
 </body>
