--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Tipos de razas de Perros</h1>
+        <img src="" alt="">
+    </header>
     <main>
         <h1>Proyecto</h1>
         <section></section>
