--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <header>
         <h1>Tipos de razas de Perros</h1>
-        <img src="" alt="">
+        <figure>
+            <img src="./img/perros.jpg" alt="Imagen de Perros">
+        </figure>
     </header>
     <main>
         <h1>Proyecto</h1>
