--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header></header>
     <main>
-        <h1>Proyecto</h1>
+        <h1>Mis perros:</h1>
         <section>
             <h2>Raza 1: Golden Retriever</h2>
             <img src="golden_retriever.jpg" alt="Imagen de un Golden Retriever">
