--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <p>El Dachshund, también conocido como el "Perro Salchicha," es una raza pequeña con cuerpo largo y patas cortas. Son conocidos por sus personalidades juguetonas y aventureras. Originalmente fueron criados para la caza y tienen un fuerte instinto de presa. A pesar de su tamaño, son confiados y hacen compañeros leales.</p>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <h1>Visita nuestras redes sociales</h1>
+    </footer>
 </body>
 </html>
