--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
         <h1>Mis perros:</h1>
         <section>
             <h2>Raza 1: Golden Retriever</h2>
-            <img src="golden_retriever.jpg" alt="Imagen de un Golden Retriever">
+            <img   class="perro" src="golden_retriever.jpg" alt="Imagen de un Golden Retriever">
             <p>El Golden Retriever es una raza amigable e inteligente conocida por su hermoso pelaje dorado. Son gentiles, obedientes y excelentes con las familias. Los Golden Retrievers son excelentes tanto como mascotas familiares como perros de trabajo. A menudo se utilizan en misiones de búsqueda y rescate debido a sus fuertes habilidades para nadar y su agudo sentido del olfato.</p>
         </section>
           
         <section>
             <h2>Raza 2: Border Collie</h2>
-            <img src="border_collie.jpg" alt="Imagen de un Border Collie">
+            <img    class="perro" src="border_collie.jpg" alt="Imagen de un Border Collie">
             <p>El Border Collie es una raza altamente inteligente y ágil. Sobresalen en obediencia y deportes caninos gracias a sus notables habilidades para el pastoreo. Los Border Collies son enérgicos y prosperan con la estimulación física y mental. A menudo se utilizan para pastorear ganado y como perros de agilidad competitiva.</p>
         </section>
           
         <section>
             <h2>Raza 3: Dachshund</h2>
-            <img src="dachshund.jpg" alt="Imagen de un Dachshund">
+            <img    class="perro" src="dachshund.jpg" alt="Imagen de un Dachshund">
             <p>El Dachshund, también conocido como el "Perro Salchicha," es una raza pequeña con cuerpo largo y patas cortas. Son conocidos por sus personalidades juguetonas y aventureras. Originalmente fueron criados para la caza y tienen un fuerte instinto de presa. A pesar de su tamaño, son confiados y hacen compañeros leales.</p>
         </section>
     </main>
